--- a/extent-reports/Index.html
+++ b/extent-reports/Index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Test Extend Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jun 10, 2024 09:15:28 PM</span></a>
+<a href="#"><span class="badge badge-primary">Jun 12, 2024 09:13:53 PM</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">testAmazonSearchFunctionality</p>
+            <p class="name">testLogin</p>
             <p class="text-sm">
-              <span>9:15:43 PM</span> / <span>00:00:00:012</span>
+              <span>9:13:59 PM</span> / <span>00:00:00:004</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">testAmazonSearchFunctionality</h5>
-<span class='badge badge-success'>06.10.2024 9:15:43 PM</span>
-<span class='badge badge-danger'>06.10.2024 9:15:43 PM</span>
-<span class='badge badge-default'>00:00:00:012</span>
+<h5 class="test-status text-pass">testLogin</h5>
+<span class='badge badge-success'>06.12.2024 9:13:59 PM</span>
+<span class='badge badge-danger'>06.12.2024 9:13:59 PM</span>
+<span class='badge badge-default'>00:00:00:004</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,7 +105,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:15:43 PM</td>
+        <td>9:13:59 PM</td>
         <td>
           Started Tcs---
         </td>
@@ -120,9 +120,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">testLogin</p>
+            <p class="name">testAmazonSearchFunctionality</p>
             <p class="text-sm">
-              <span>9:15:52 PM</span> / <span>00:00:00:000</span>
+              <span>9:13:59 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -130,9 +130,9 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">testLogin</h5>
-<span class='badge badge-success'>06.10.2024 9:15:52 PM</span>
-<span class='badge badge-danger'>06.10.2024 9:15:52 PM</span>
+<h5 class="test-status text-pass">testAmazonSearchFunctionality</h5>
+<span class='badge badge-success'>06.12.2024 9:13:59 PM</span>
+<span class='badge badge-danger'>06.12.2024 9:13:59 PM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
@@ -146,7 +146,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>9:15:52 PM</td>
+        <td>9:13:59 PM</td>
         <td>
           Started Tcs---
         </td>
@@ -170,13 +170,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jun 10, 2024 09:15:28 PM</h3>
+<h3>Jun 12, 2024 09:13:53 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jun 10, 2024 09:16:03 PM</h3>
+<h3>Jun 12, 2024 09:14:10 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -246,7 +246,7 @@
 </div></div>
 <script>
 var timeline = {
-"testAmazonSearchFunctionality":0.012,"testLogin":0
+"testLogin":0.004,"testAmazonSearchFunctionality":0
 };
 </script>
 <div class="row">
